only apply force nametagged for riding to Mobs instead of all entities.  Fixes potential incompatibilities with plugins that mount player on armor stands